hphp/hack/test/typecheck/idx2_4.php.exp
File "idx2_4.php", line 9, characters 12-12:
Invalid argument (Typing[4110])
File "idx.hhi", line 29, characters 35-56:
This is an object of type KeyedContainer
File "idx2_4.php", line 9, characters 12-12:
It is incompatible with an int
